base/builds/regulus/argocd/projects/monitoring/manifests/prometheus/prometheus.yaml
apiVersion: v1
kind: Namespace
metadata:
	name: monitoring

---
apiVersion: v1
kind: Service
metadata:
	name: prometheus
	namespace: monitoring
	labels:
		app: prometheus
spec:
	selector:
		app: prometheus
	ports:
	- name: web
		port: 9090
		targetPort: 9090
	type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
	name: prometheus
	namespace: monitoring
	labels:
		app: prometheus
spec:
	replicas: 1
	selector:
		matchLabels:
			app: prometheus
	template:
		metadata:
			labels:
				app: prometheus
		spec:
			serviceAccountName: prometheus
			containers:
			- name: prometheus
				image: prom/prometheus:v2.49.0
				args:
				- --config.file=/etc/prometheus/prometheus.yml
				- --storage.tsdb.path=/prometheus
				- --web.listen-address=":9090"
				ports:
				- containerPort: 9090
					name: web
				volumeMounts:
				- name: config
					mountPath: /etc/prometheus/
				- name: storage
					mountPath: /prometheus
			volumes:
			- name: config
				configMap:
					name: prometheus-config
			- name: storage
				emptyDir: {}
